--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
+    "json2csv": "^6.0.0-alpha.2",
     "selenium-webdriver": "^4.11.1"
   }
 }
