--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "json2csv": "^6.0.0-alpha.2",
     "selenium-webdriver": "^4.11.1"
   }
